--- a/about.html
+++ b/about.html
@@ -10,8 +10,11 @@
     />
     <meta name="keywords" content="hotel,boston hotel,new england hotel" />
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/responsive.css" />
-
+    <link
+      rel="stylesheet"
+      media="screen and (max-width:700px)"
+      href="css/responsive.css"
+    />
     <title>Hotel BT | About</title>
   </head>
   <body>
