--- a/contact.html
+++ b/contact.html
@@ -16,8 +16,11 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/responsive.css" />
-
+    <link
+      rel="stylesheet"
+      media="screen and (max-width:700px)"
+      href="css/responsive.css"
+    />
     <title>Hotel BT | Contact</title>
   </head>
   <body>
